// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`topic component should render topic 1`] = `
<DocumentFragment>
  <div
    class="accordion-item oereb-client-topic"
  >
    <h2
      class="accordion-header"
    >
      <button
        class="accordion-button pt-2 pb-2 collapsed"
        type="button"
      >
        <div
          class="oereb-topic-lawstatus"
        >
          <small
            class="fst-italic"
          >
            Rechtskräftig
          </small>
        </div>
      </button>
    </h2>
    <div
      class="accordion-collapse collapse"
    >
      <div
        class="accordion-body"
      >
        <div
          class="row align-items-center mb-2"
        >
          <div
            class="col-3"
          >
            <small>
              extract.topic.opacity:
            </small>
          </div>
          <div
            class="col-2 pe-2 text-end"
          >
            <small>
              100%
            </small>
          </div>
          <div
            class="col-7"
          >
            <input
              class="form-range align-middle"
              max="100"
              min="0"
              type="range"
              value="100"
            />
          </div>
        </div>
        <table
          class="table table-sm mb-2 oereb-client-legend"
        >
          <thead>
            <tr>
              <th>
                extract.topic.legend.type
              </th>
              <th />
              <th
                class="text-end text-nowrap"
              >
                extract.topic.legend.part
              </th>
              <th
                class="text-end text-nowrap"
              >
                extract.topic.legend.part_in_percent
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="oereb-client-symbol-cell"
              >
                <img
                  class="oereb-client-symbol"
                  src="samples/static/symbol2.png"
                />
              </td>
              <td
                class="oereb-client-legend-text"
              >
                Belastet, untersuchungsbedürftig
              </td>
              <td
                class="oereb-client-legend-text text-end text-nowrap"
              >
                202 m
              </td>
              <td
                class="oereb-client-legend-text text-end text-nowrap"
              />
            </tr>
          </tbody>
        </table>
        <dl
          class="oereb-client-documents mb-2"
        >
          <dt>
            extract.topic.document.legal_provisions
          </dt>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Baugesetz, 3891.100
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/197"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/197
                </a>
              </li>
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/198"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/198
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Revision Ortsplanung, 07.447
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/213"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/213
                </a>
              </li>
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/214"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/214
                </a>
              </li>
            </ul>
          </dd>
          <dt>
            extract.topic.document.laws
          </dt>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Raumplanungsverordnung für den Kanton Graubünden (KRVO), BR 801.110
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2934?locale=de"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2934?locale=de
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Bundesgesetz über die Raumplanung (Raumplanungsgesetz, RPG) (RPG), SR 700
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="http://www.lexfind.ch/dtah/167348/2"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://www.lexfind.ch/dtah/167348/2
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Raumplanungsgesetz für den Kanton Graubünden (KRG), BR 801.100
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2936?locale=de"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2936?locale=de
                </a>
              </li>
            </ul>
          </dd>
          <dt>
            extract.topic.document.hints
          </dt>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Guter Ratschlag
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="http://example.com/goodhint1"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://example.com/goodhint1
                </a>
              </li>
              <li>
                <a
                  href="http://example.com/goodhint2"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://example.com/goodhint2
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Seht guter Ratschlag mit langem titel: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras convallis venenatis posuere. Nunc sollicitudin fermentum bibendum. Nulla ut massa enim. Sed rhoncus euismod venenatis
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="http://example.com/goodhint3"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://example.com/goodhint3
                </a>
              </li>
            </ul>
          </dd>
        </dl>
        <dl
          class="oereb-client-responsible-office border-top pt-2 mb-2"
        >
          <dt>
            extract.topic.responsible_office
          </dt>
          <dd
            class="ms-2"
          >
            <a
              href="https://www.bav.admin.ch/bav/de/home.html"
              rel="noreferrer"
              target="_blank"
            >
              Bundesamt für Verkehr BAV
            </a>
          </dd>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`topic component should render topic 2`] = `
<DocumentFragment>
  <div
    class="accordion-item oereb-client-topic"
  >
    <h2
      class="accordion-header"
    >
      <button
        class="accordion-button pt-2 pb-2"
        type="button"
      >
        <div
          class="oereb-topic-lawstatus"
        >
          <small
            class="fst-italic"
          >
            Rechtskräftig
          </small>
        </div>
      </button>
    </h2>
    <div
      class="accordion-collapse collapsing"
      style="height: 0px;"
    >
      <div
        class="accordion-body"
      >
        <div
          class="row align-items-center mb-2"
        >
          <div
            class="col-3"
          >
            <small>
              extract.topic.opacity:
            </small>
          </div>
          <div
            class="col-2 pe-2 text-end"
          >
            <small>
              100%
            </small>
          </div>
          <div
            class="col-7"
          >
            <input
              class="form-range align-middle"
              max="100"
              min="0"
              type="range"
              value="100"
            />
          </div>
        </div>
        <table
          class="table table-sm mb-2 oereb-client-legend"
        >
          <thead>
            <tr>
              <th>
                extract.topic.legend.type
              </th>
              <th />
              <th
                class="text-end text-nowrap"
              >
                extract.topic.legend.part
              </th>
              <th
                class="text-end text-nowrap"
              >
                extract.topic.legend.part_in_percent
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="oereb-client-symbol-cell"
              >
                <img
                  class="oereb-client-symbol"
                  src="samples/static/symbol2.png"
                />
              </td>
              <td
                class="oereb-client-legend-text"
              >
                Belastet, untersuchungsbedürftig
              </td>
              <td
                class="oereb-client-legend-text text-end text-nowrap"
              >
                202 m
              </td>
              <td
                class="oereb-client-legend-text text-end text-nowrap"
              />
            </tr>
          </tbody>
        </table>
        <dl
          class="oereb-client-documents mb-2"
        >
          <dt>
            extract.topic.document.legal_provisions
          </dt>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Baugesetz, 3891.100
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/197"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/197
                </a>
              </li>
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/198"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/198
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Revision Ortsplanung, 07.447
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/213"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/213
                </a>
              </li>
              <li>
                <a
                  href="https://oereb-gr-preview.000.ch/api/attachments/214"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://oereb-gr-preview.000.ch/api/attachments/214
                </a>
              </li>
            </ul>
          </dd>
          <dt>
            extract.topic.document.laws
          </dt>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Raumplanungsverordnung für den Kanton Graubünden (KRVO), BR 801.110
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2934?locale=de"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2934?locale=de
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Bundesgesetz über die Raumplanung (Raumplanungsgesetz, RPG) (RPG), SR 700
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="http://www.lexfind.ch/dtah/167348/2"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://www.lexfind.ch/dtah/167348/2
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Raumplanungsgesetz für den Kanton Graubünden (KRG), BR 801.100
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2936?locale=de"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://www.gr-lex.gr.ch/frontend/versions/pdf_file_with_annex/2936?locale=de
                </a>
              </li>
            </ul>
          </dd>
          <dt>
            extract.topic.document.hints
          </dt>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Guter Ratschlag
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="http://example.com/goodhint1"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://example.com/goodhint1
                </a>
              </li>
              <li>
                <a
                  href="http://example.com/goodhint2"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://example.com/goodhint2
                </a>
              </li>
            </ul>
          </dd>
          <dd
            class="oereb-client-document ms-2"
          >
            <span>
              Seht guter Ratschlag mit langem titel: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras convallis venenatis posuere. Nunc sollicitudin fermentum bibendum. Nulla ut massa enim. Sed rhoncus euismod venenatis
            </span>
            <ul
              class="ps-2 mb-2"
            >
              <li>
                <a
                  href="http://example.com/goodhint3"
                  rel="noreferrer"
                  target="_blank"
                >
                  http://example.com/goodhint3
                </a>
              </li>
            </ul>
          </dd>
        </dl>
        <dl
          class="oereb-client-responsible-office border-top pt-2 mb-2"
        >
          <dt>
            extract.topic.responsible_office
          </dt>
          <dd
            class="ms-2"
          >
            <a
              href="https://www.bav.admin.ch/bav/de/home.html"
              rel="noreferrer"
              target="_blank"
            >
              Bundesamt für Verkehr BAV
            </a>
          </dd>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
